fix category dropdown alignment

--- a/styles/search.scss
+++ b/styles/search.scss
@@ -112,6 +112,7 @@
       padding: 0 1em;
       outline: none;
       height: 2em;
+      text-align: right;
     }
   }
 }
