--- a/styles/todos.scss
+++ b/styles/todos.scss
@@ -229,6 +229,7 @@ main {
               font-size: 1.1em;
               opacity: 10;
               height: 2em;
+              text-align: right;
             }
           }
 
